codeforces/964/g2.out
g2.cc: In function ‘int main()’:
g2.cc:132:11: error: ‘i’ was not declared in this scope
  132 |     solve(i);
      |           ^
g2.cc: At global scope:
g2.cc:63:13: warning: ‘void YES()’ defined but not used [-Wunused-function]
   63 | static void YES() {
      |             ^~~
g2.cc:59:13: warning: ‘void NO()’ defined but not used [-Wunused-function]
   59 | static void NO() {
      |             ^~
